--- a/Client/Pages/About.razor
+++ b/Client/Pages/About.razor
@@ -1,7 +1,7 @@
 ﻿@page "/about"
 <div class="content-container">
     <div class="content-title-group not-found">
-        <h2 class="title">Product Wish List</h2>
+        <h2 class="title">Product Wish List - 연습</h2>
         <p>
             This project was created to help represent a fundamental app written
             with Blazor. The shopping theme is used throughout the app.
